deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: harman-wordpress
  labels:
    app: harman-wordpress
spec:
  selector:
    matchLabels:
      app: harman-wordpress
  replicas: 1
  template:
    metadata:
      labels:
        app: harman-wordpress
    spec:
      containers:
      - name: harman-wordpress
        image: wordpress:latest
        ports:
        - containerPort: 80
