service.yaml
apiVersion: v1
kind: Service
metadata:
  name: harman-wordpress
spec:
  selector:
    app: harman-wordpress
  type: ClusterIP
  ports:
  - name: harman-wordpress
    protocol: TCP
    port: 80
    targetPort: 80
